--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#b35600" />
+    <meta name="theme-color" content="#EF692B" />
     <meta name="title" content="Carrot" />
     <meta name="description" content="A KPI token platform with a focus on simplicity." />
     <meta name="image" content="%PUBLIC_URL%/og.png" />
