--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#EF692B" />
-    <meta name="title" content="Carrot" />
-    <meta name="description" content="A KPI token platform with a focus on simplicity." />
-    <meta name="image" content="%PUBLIC_URL%/og.png" />
-    <meta property="og:title" content="Carrot" />
-    <meta property="og:description" content="A KPI token platform with a focus on simplicity." />
-    <meta property="og:image" content="https://carrot.eth.link/og.png" />
-    <meta property="og:url" content="https://carrot.eth.link/" />
-    <meta property="og:site_name" content="Carrot" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Carrot" />
-    <meta name="twitter:description" content="A KPI token platform with a focus on simplicity." />
-    <meta name="twitter:image" content="https://carrot.eth.link/og.png" />
-    <meta name="twitter:image:alt" content="Carrot" />
-    <meta name="twitter:site" content="@CarrotEth" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <script>
-      ;(function () {
-        const { pathname, hostname, protocol } = window.location
-        if (protocol === 'http:' && hostname !== 'localhost') {
-          window.location.protocol = 'https'
-          return
-        }
-      })()
-    </script>
-    <title>Carrot</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link
+            rel="shortcut icon"
+            type="image/png"
+            href="%PUBLIC_URL%/favicon.ico"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#EF692B" />
+        <meta name="title" content="Carrot" />
+        <meta
+            name="description"
+            content="A KPI token platform with a focus on simplicity."
+        />
+        <meta name="image" content="%PUBLIC_URL%/og.png" />
+        <meta property="og:title" content="Carrot" />
+        <meta
+            property="og:description"
+            content="A KPI token platform with a focus on simplicity."
+        />
+        <meta property="og:image" content="https://carrot.eth.link/og.png" />
+        <meta property="og:url" content="https://carrot.eth.link/" />
+        <meta property="og:site_name" content="Carrot" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Carrot" />
+        <meta
+            name="twitter:description"
+            content="A KPI token platform with a focus on simplicity."
+        />
+        <meta name="twitter:image" content="https://carrot.eth.link/og.png" />
+        <meta name="twitter:image:alt" content="Carrot" />
+        <meta name="twitter:site" content="@CarrotEth" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="%PUBLIC_URL%/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="%PUBLIC_URL%/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="%PUBLIC_URL%/favicon-16x16.png"
+        />
+        <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+        <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#ef692b" />
+        <meta name="msapplication-TileColor" content="#000000" />
+        <meta name="theme-color" content="#000000" />
+        <title>Carrot</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
