--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -51,9 +51,21 @@
             href="%PUBLIC_URL%/favicon-16x16.png"
         />
         <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
-        <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#ef692b" />
+        <link
+            rel="mask-icon"
+            href="%PUBLIC_URL%/safari-pinned-tab.svg"
+            color="#ef692b"
+        />
         <meta name="msapplication-TileColor" content="#000000" />
         <meta name="theme-color" content="#000000" />
+        <!-- FIXME: change the data-site to the final site -->
+        <script
+            src="https://cdn.usefathom.com/script.js"
+            data-spa="auto"
+            data-site="YPUQOWIV"
+            data-auto="false"
+            defer
+        ></script>
         <title>Carrot</title>
     </head>
     <body>
