fix(frontend): issues with the campaigns page

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -60,7 +60,7 @@
         <meta name="theme-color" content="#000000" />
         <title>Carrot</title>
     </head>
-    <body>
+    <body id="__app_body">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body>
