--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -14,13 +14,13 @@
             name="description"
             content="A KPI token platform with a focus on simplicity."
         />
-        <meta name="image" content="%PUBLIC_URL%/og.png" />
+        <meta name="image" content="og.png" />
         <meta property="og:title" content="Carrot" />
         <meta
             property="og:description"
             content="A KPI token platform with a focus on simplicity."
         />
-        <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+        <meta property="og:image" content="og.png" />
         <meta property="og:url" content="https://carrot.eth.link/" />
         <meta property="og:site_name" content="Carrot" />
         <meta property="og:type" content="website" />
@@ -30,7 +30,7 @@
             name="twitter:description"
             content="A KPI token platform with a focus on simplicity."
         />
-        <meta name="twitter:image" content="%PUBLIC_URL%/og.png" />
+        <meta name="twitter:image" content="og.png" />
         <meta name="twitter:image:alt" content="Carrot" />
         <meta name="twitter:site" content="@CarrotEth" />
         <link
