fix(frontend): add absolute urls for og:image and twitter:image, update description

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -12,15 +12,15 @@
         <meta name="title" content="Carrot" />
         <meta
             name="description"
-            content="A KPI token platform with a focus on simplicity."
+            content="Easy and powerful tool to create conditional tokens allowing an effective method to achieve any goal desirable using permissionless, decentralized technologies."
         />
         <meta name="image" content="%PUBLIC_URL%/og.png" />
         <meta property="og:title" content="Carrot" />
         <meta
             property="og:description"
-            content="A KPI token platform with a focus on simplicity."
+            content="Easy and powerful tool to create conditional tokens allowing an effective method to achieve any goal desirable using permissionless, decentralized technologies."
         />
-        <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+        <meta property="og:image" content="https://carrot.eth.link/og.png" />
         <meta property="og:url" content="https://carrot.eth.link/" />
         <meta property="og:site_name" content="Carrot" />
         <meta property="og:type" content="website" />
@@ -28,9 +28,9 @@
         <meta name="twitter:title" content="Carrot" />
         <meta
             name="twitter:description"
-            content="A KPI token platform with a focus on simplicity."
+            content="Easy and powerful tool to create conditional tokens allowing an effective method to achieve any goal desirable using permissionless, decentralized technologies."
         />
-        <meta name="twitter:image" content="%PUBLIC_URL%/og.png" />
+        <meta name="twitter:image" content="https://carrot.eth.link/og.png" />
         <meta name="twitter:image:alt" content="Carrot" />
         <meta name="twitter:site" content="@CarrotEth" />
         <link
